--- a/css/account.css
+++ b/css/account.css
@@ -13,7 +13,7 @@ html, body { height: 100%; }
 
 .bg_gray { background: #f4f4f4; }
 
-.user { /* avatar sec */ /* banner section */ /* main body */ /* activity history sections under main body */ /* sections under main body */ /* bankcards list section*/ /* bankcard single item */ /* normal and hollowed button with ab_bottom to locate at the bottom of the page*/ /* coupon page */ }
+.user { /* avatar sec */ /* banner section */ /* main body */ /* activity history sections under main body */ /* sections under main body */ /* bankcards list section*/ /* bankcard single item */ /* normal and hollowed button with ab_bottom to locate at the bottom of the page*/ /* task page */ /* coupon page */ }
 .user_avatar { width: 25%; margin: 0 auto; padding: 10px 0; color: #fff; }
 .user_avatar .pure-img { border: 2px solid #fff; -moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 .user_avatar h3, .user_avatar p { font-weight: normal; text-align: center; width: 200%; margin-left: -50%; }
@@ -72,6 +72,7 @@ html, body { height: 100%; }
 .user_main .pure-table-horizontal span { color: #ddd; display: block; }
 .user_about { height: 100%; }
 .user_reset { height: auto; min-height: inherit; padding: 0; }
+.user_task { min-height: 440px; }
 .user_history { font-size: .9em; text-align: left; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; padding: 1.5%; width: 92%; -moz-box-shadow: 0px 0px 3px #666; -webkit-box-shadow: 0px 0px 3px #666; box-shadow: 0px 0px 3px #666; margin: 0 auto 3%; color: #666; }
 .user_history p { margin-top: 1.5%; }
 .user_sec { font-size: .9em; text-align: left; width: 88%; background: #fff; margin: 0 auto 5%; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }
@@ -115,6 +116,24 @@ html, body { height: 100%; }
 .user_main_btn_hollow { background: #fff; color: #0d8fdb; }
 .user_main_btn_hollow:hover { color: #0d8fdb; }
 .user_main_btn.ab_bottom { position: absolute; bottom: 1.3em; left: 0; width: 88%; margin: 0 6%; }
+.task_nav { height: 34px; line-height: 34px; text-align: center; }
+.task_nav li { background: #fff; color: #09b2fe; border: 1px solid #09b2fe; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; position: relative; z-index: 999; text-shadow: 1px 1px 1px #666; font-size: .9em; }
+.task_nav li.active { background: #09b2fe; color: #fff; }
+.task_item { position: relative; width: 84%; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; color: #fff; text-align: left; text-indent: 1em; margin: 0 auto 5%; font-size: .9em; }
+.task_item:last-of-type { margin-bottom: 20%; }
+.task_item.active .task_title { background: #0d8fdb; }
+.task_item.active .task_cnt { padding: 1em; max-height: 400px; transition: all .5s linear; }
+.task_title { position: relative; z-index: 9; background: #b8e5ff; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; height: 36px; line-height: 36px; text-shadow: 1px 1px 1px #666; }
+.task_title .task_btn { float: right; margin-right: 1em; display: inline-block; background: #fff; height: 20px; line-height: 20px; margin-top: 8px; text-align: center; width: 50px; text-indent: 0; border-radius: 12px; box-shadow: 1px 1px 1px #666; color: #0d8fdb; }
+.task_title .task_btn:active { color: #fff; background: #0d8fdb; }
+.task_stars { display: inline-block; height: 20px; margin-top: 2px; float: right; margin-right: 1em; }
+.task_stars i { display: inline-block; width: 12px; height: 16px; margin: 0 1px; background: url('../img/task_star.png?1438614260') no-repeat center; background-size: contain; }
+.task_cnt { text-indent: 0; font-size: .8em; background: #fff; border: 1px solid #0d8fdb; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; margin-top: -36px; padding: 0 1em; max-height: 0; overflow-y: hidden; width: 100%; transition: all .5s linear; }
+.task_cnt label { display: block; color: #44bbdb; margin: 2px 0; }
+.task_cnt p { color: #666; }
+.task_bonus { display: inline-block; width: 38px; height: 50px; margin-right: 5px; color: #666; font-size: .82em; text-align: center; }
+.task_bonus_img { width: 36px; height: 36px; border: 1px solid #44bbdb; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; text-align: center; }
+.task_bonus_img img { height: 90%; width: auto; margin: 5%; }
 .coupon_nav { height: 36px; line-height: 36px; text-align: center; color: #fff; }
 .coupon_nav li { background: #c0edff; }
 .coupon_nav li.active { background: #09b2fe; }
